--- a/raspberryPi/docker/docker-compose.yml
+++ b/raspberryPi/docker/docker-compose.yml
@@ -6,9 +6,23 @@ services:
     image: "ghcr.io/home-assistant/home-assistant:stable"
     volumes:
       # Local path where your home assistant config will be stored
-      - ~/homeautomation-config:/config
+      - ~/config/homeassistent-config:/config
       - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
     privileged: true
     network_mode: host
-    user: "${LOCAL_USER}:${LOCAL_USER}"
+  
+  # Node-RED
+  nodered:
+    container_name: nodered
+    image: nodered/node-red
+    ports:
+      - "1880:1880"
+    volumes:
+      # Local path where all Node-RED config will be stored.
+      - ~/config/nodered-config:/data
+    depends_on:
+      - homeassistant
+    environment:
+      TZ: "Europe/Amsterdam"
+    restart: unless-stopped
